<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/ActivityBackround" >
    
    <EditText
        android:id="@+id/calcPercentageParentWidth" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_calculate_percentage_parent_width"
        style="@style/EditText" />
    
    <EditText
        android:id="@+id/calcPercentageElementWidth" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/hint_calculate_percentage_element_width"
        style="@style/EditText" />
    
    <Button 
        android:text="@string/button_calculate_percentage" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="calculatePercentage"
        style="@style/Button" />
    
    <TextView 
        android:id="@+id/calculatePercentageResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textIsSelectable="true"
        android:gravity="center"
        android:text="@string/text_calculate_percentage_result"
        style="@style/TextView" />
    
</LinearLayout>