<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/ActivityBackround" >
    
    <EditText 
        android:id="@+id/fontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_font_size_in_px"
        android:inputType="number"
        style="@style/EditText" />
    
    <Button 
        android:text="@string/button_convert_to_em" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="convertPxToEm"
        style="@style/Button" />
    
    <TextView 
        android:id="@+id/text_convert_em_result"
        style="@style/TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textIsSelectable="true"
        android:gravity="center"
        android:text="@string/text_convert_to_em_result" />
    
</LinearLayout>

